--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,10 @@
             <version>2.0.5</version>
         </dependency>
         <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>31.1-jre</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.0.6</version>
         </dependency>
-
     </dependencies>
 
 </project>
