--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <version>2.10</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>rome</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
