--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,26 @@
         <maven.compiler.target>18</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>org.assignment.exchangerates.ExchangeRateApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
     <dependencies>
         <dependency>
             <groupId>io.javalin</groupId>
